--- a/education/index.html
+++ b/education/index.html
@@ -131,12 +131,12 @@ ul.task-list li input[type="checkbox"] {
 <span class="menu-text">Github</span></a>
   </li>  
   <li class="nav-item compact">
-    <a class="nav-link" href="../www.linkedin.com/in/wenlan-zhang"> <i class="bi bi-linkedin" role="img">
+    <a class="nav-link" href="https://www.linkedin.com/in/wenlan-zhang"> <i class="bi bi-linkedin" role="img">
 </i> 
 <span class="menu-text"></span></a>
   </li>  
   <li class="nav-item compact">
-    <a class="nav-link" href="Wenlan:wenlan.zhang.21@ucl.ac.uk"> <i class="bi bi-envelope" role="img" aria-label="email">
+    <a class="nav-link" href="mailto:wenlan.zhang.21@ucl.ac.uk"> <i class="bi bi-envelope" role="img" aria-label="email">
 </i> 
 <span class="menu-text"></span></a>
   </li>  
@@ -176,49 +176,33 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="phd-in-advanced-spatial-analysis" class="level2">
 <h2 class="anchored" data-anchor-id="phd-in-advanced-spatial-analysis">PhD in Advanced Spatial Analysis</h2>
-<p>March 2022 -</p>
-<p><a href="https://www.ucl.ac.uk/bartlett/casa/study/advanced-spatial-analysis-mphilphd" target="_blank">Centre for Advanced Spatial Analysis (CASA)</a> | <a href="https://www.ucl.ac.uk/bartlett/" target="_blank">The Bartlett Faculty of the Built Environment </a><br> | <a href="https://www.ucl.ac.uk/" target="_blank">University College London</a><br></p>
-<p>Research Topic: Quantifying digital injustice: a case study of Nairobi, Kenya</p>
-<p>Research Plan: Developing a workflow to assess the performance of big data by comparing with traditional methods in Nairobi, Kenya; Identifying digital invisible groups and proposing mitigation approaches to empower these groups for data-enabled decision-making.</p>
-<!-- 
-<img src="project_1_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2210.07278', 'blank');"/>
-
-
-Over the centuries, I have devoted countless hours to deciphering and translating the ancient scripts and dialects of the various peoples of Middle-earth. My goal is to gain a deeper understanding of the cultures and histories of these peoples by studying their languages. Currently, I am working on a monograph that explores the linguistic roots of the Elvish languages. Through extensive research and analysis, I hope to shed light on the connections between the different dialects of Elvish and their origins. This project has been particularly challenging, as Elvish is a complex and nuanced language, but I am determined to see it through to completion.
--->
+<p><strong>March 2022 - Present</strong><br>
+<a href="https://www.ucl.ac.uk/bartlett/casa/study/advanced-spatial-analysis-mphilphd" target="_blank">Centre for Advanced Spatial Analysis (CASA)</a> | <a href="https://www.ucl.ac.uk/bartlett/" target="_blank">The Bartlett Faculty of the Built Environment</a> | <a href="https://www.ucl.ac.uk/" target="_blank">University College London</a></p>
+<p><strong>Research Topic</strong>:<br>
+<em>Quantifying digital injustice: a case study of Nairobi, Kenya</em></p>
+<p><strong>Research Plan</strong>:<br>
+Developing a workflow to assess the performance of big data by comparing it with traditional methods in Nairobi, Kenya; identifying digitally invisible groups and proposing mitigation approaches to empower these groups for data-enabled decision-making.</p>
 <hr>
 </section>
 <section id="msc-in-environmental-technology" class="level2">
 <h2 class="anchored" data-anchor-id="msc-in-environmental-technology">MSc in Environmental Technology</h2>
-<p>September 2019 - September 2020</p>
-<p><a href="https://www.imperial.ac.uk/environmental-policy/" target="_blank">Centre for Environmental Policy</a> | <a href="https://www.imperial.ac.uk/natural-sciences/" target="_blank">Faculty of Natural Sciences</a><br> | <a href="https://www.imperial.ac.uk/" target="_blank">Imperial College London</a><br></p>
-<p>Master Thesis: Distributed Ledger Technology enabled passenger control system to maintain social distancing on public transport during COVID-19</p>
-<p>Result &amp; Outcome: Applied a resource-sharing algorithm to the public transport sector to control the movement of the passengers. The system also came with a compliance scheme achieved by distributed ledger technology. The model used smart card data from London underground to simulate pass <!-- 
-<img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2112.08866', 'blank');"/>
---></p>
+<p><strong>September 2019 - September 2020</strong><br>
+<a href="https://www.imperial.ac.uk/environmental-policy/" target="_blank">Centre for Environmental Policy</a> | <a href="https://www.imperial.ac.uk/natural-sciences/" target="_blank">Faculty of Natural Sciences</a> | <a href="https://www.imperial.ac.uk/" target="_blank">Imperial College London</a></p>
+<p><strong>Master Thesis</strong>:<br>
+<em>Distributed Ledger Technology enabled passenger control system to maintain social distancing on public transport during COVID-19</em></p>
+<p><strong>Result &amp; Outcome</strong>:<br>
+Applied a resource-sharing algorithm to the public transport sector to control passenger movement. The system, enhanced by distributed ledger technology, used smart card data from the London Underground to simulate and enforce compliance.</p>
 <hr>
 </section>
 <section id="beng-in-marine-resource-development-technology" class="level2">
 <h2 class="anchored" data-anchor-id="beng-in-marine-resource-development-technology">BEng in Marine Resource Development Technology</h2>
-<p>September 2015 - June 2019</p>
-<p><a href="https://mc.wh.sdu.edu.cn/" target="_blank">Marine College</a> | <a href="https://www.en.sdu.edu.cn/" target="_blank">Shandong University</a><br> <a href="https://mc.wh.sdu.edu.cn/" target="_blank">海洋学院</a> | <a href="https://www.sdu.edu.cn/" target="_blank">山东大学</a><br></p>
-<p>Bachelor Thesis: An Anoxic Bio-Filter (ABF) - Membrane Bioreactor (MBR) combined process on high salinity wastewater treatment and the effect of membrane fouling</p>
-<p>Result &amp; Outcome: Designed and installed an ABF system to augment the existing MBR setup; Conducted rigorous testing to evaluate the efficiency of the combined ABF-MBR process on denitrification effect and alleviate the membrane fouling; Producing report detailing findings and recommendations. <!-- 
-<img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2112.08866', 'blank');"/>
---> <!-- 
-I am creating a comprehensive and detailed history of the conflict that goes beyond the surface-level events. By gathering information from a variety of sources, including my own memories, written accounts, and oral histories, I hope to shed new light on this important period in Middle-earth's history and provide valuable insights into the motivations and actions of the various players involved.
---></p>
-<!-- 
-
-
-```{=html}
-<div  style="margin: 30px; text-align: center;">
-<a class="btn btn-primary" href="https://www.marvinschmitt.com/blog/website-tutorial-quarto/" role="button" target="_blank" style="padding: 15px 30px;">View the tutorial for this template (+ download link)</a>
-</div>
-```
-
-
--->
+<p><strong>September 2015 - June 2019</strong><br>
+<a href="https://mc.wh.sdu.edu.cn/" target="_blank">Marine College</a> | <a href="https://www.en.sdu.edu.cn/" target="_blank">Shandong University</a><br>
+<a href="https://mc.wh.sdu.edu.cn/" target="_blank">海洋学院</a> | <a href="https://www.sdu.edu.cn/" target="_blank">山东大学</a></p>
+<p><strong>Bachelor Thesis</strong>:<br>
+<em>An Anoxic Bio-Filter (ABF) - Membrane Bioreactor (MBR) combined process on high salinity wastewater treatment and the effect of membrane fouling</em></p>
+<p><strong>Result &amp; Outcome</strong>:<br>
+Designed and installed an ABF system to enhance the existing MBR setup; conducted rigorous testing to evaluate the combined ABF-MBR process’s efficiency in denitrification and membrane fouling reduction; produced a comprehensive report detailing findings and recommendations.</p>
 
 
 </section>
