--- a/experience/index.html
+++ b/experience/index.html
@@ -131,12 +131,12 @@ ul.task-list li input[type="checkbox"] {
 <span class="menu-text">Github</span></a>
   </li>  
   <li class="nav-item compact">
-    <a class="nav-link" href="../www.linkedin.com/in/wenlan-zhang"> <i class="bi bi-linkedin" role="img">
+    <a class="nav-link" href="https://www.linkedin.com/in/wenlan-zhang"> <i class="bi bi-linkedin" role="img">
 </i> 
 <span class="menu-text"></span></a>
   </li>  
   <li class="nav-item compact">
-    <a class="nav-link" href="Wenlan:wenlan.zhang.21@ucl.ac.uk"> <i class="bi bi-envelope" role="img" aria-label="email">
+    <a class="nav-link" href="mailto:wenlan.zhang.21@ucl.ac.uk"> <i class="bi bi-envelope" role="img" aria-label="email">
 </i> 
 <span class="menu-text"></span></a>
   </li>  
