--- a/experience/index.html
+++ b/experience/index.html
@@ -176,9 +176,9 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="research-assistant-at-the-world-bank-group" class="level2">
 <h2 class="anchored" data-anchor-id="research-assistant-at-the-world-bank-group">Research Assistant at the World Bank Group</h2>
-<p><img src="project_1_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2210.07278', 'blank');"></p>
-<p><a href="https://www.worldbank.org/en/about/unit/unit-dec/impactevaluation" target="_blank">DIME, World Bank</a> <!--| <a href="https://github.com/marvinschmitt/MetaUncertaintyPaper" target="_blank">Code</a><br> --></p>
-<p>Supervisor: Sveta<br>
+<p><img src="project_1_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://netmob.org/', 'blank');"></p>
+<p><a href="https://www.worldbank.org/en/about/unit/unit-dec/impactevaluation" target="_blank">World Bank(DIME)</a> | <a href="https://arxiv.org/abs/2410.00453" target="_blank">Data Challenge Paper</a><br> | <a href="https://github.com/wenlanzhang/Netmob24_datachallenge" target="_blank">Code</a><br></p>
+<p>Supervisor: Sveta Milusheva<br>
 Responsibility:<br>
 - Organising Netmob 2024<br>
 - Prepare dataset for Netmob Data Challenge<br>
@@ -188,7 +188,7 @@ Responsibility:<br>
 </section>
 <section id="teaching-assistant-at-ucl" class="level2">
 <h2 class="anchored" data-anchor-id="teaching-assistant-at-ucl">Teaching Assistant at UCL</h2>
-<p><img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2112.08866', 'blank');"></p>
+<p><img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://www.ucl.ac.uk/bartlett/casa/wenlan-zhang', 'blank');"></p>
 <p><a href="https://www.ucl.ac.uk/" target="_blank">UCL</a> <!--|  <a href="https://github.com/marvinschmitt/ModelMisspecificationBF" target="_blank">Code</a><br>--></p>
 <p>Supervisor: Andy Mac<br>
 Subject:<br>
@@ -200,7 +200,7 @@ R, QGIS, Google Earth Engine<br>
 </section>
 <section id="intern-at-united-nations-industrial-development-organization" class="level2">
 <h2 class="anchored" data-anchor-id="intern-at-united-nations-industrial-development-organization">Intern at United Nations Industrial Development Organization</h2>
-<p><img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://arxiv.org/abs/2112.08866', 'blank');"></p>
+<p><img src="project_2_banner.png" style="height: 100%; width: 100%; object-fit: contain" onclick="window.open('https://www.unido.org/', 'blank');"></p>
 <p><a href="https://www.unido.org/" target="_blank">UNIDO</a> <!--|  <a href="https://github.com/marvinschmitt/ModelMisspecificationBF" target="_blank">Code</a><br>--></p>
 <!-- I am creating a comprehensive and detailed history of the conflict that goes beyond the surface-level events. By gathering information from a variety of sources, including my own memories, written accounts, and oral histories, I hope to shed new light on this important period in Middle-earth's history and provide valuable insights into the motivations and actions of the various players involved.-->
 <!-- 
